# zyxel-lte7490-m904

./: .config  .config.old  Config.in  Makefile  README.txt  rsa_priv.txt  rsa_pub.txt  rules.mk  zyxel_config.in
configs/: preCfg.sh
docs_zyxel/: LTECPE_Model_ID_and_Firmware_version.xls
include/: kernel-defaults.mk  package-quectel.mk  package.mk  toplevel.mk
include/site/: arm-oe-linux-gnueabi
package/atftp/: Makefile
package/base-files-prebuild/: Makefile
package/bluez/: Makefile
package/bluez-tools/: Makefile
package/bluez-tools/patches/: 001_recordmac.patch
package/busybox/: Makefile
package/busybox/patches/: 092-MTKSOC_ENHANCE_hash_value_in_data_model.patch  600-MTKSOC_BUGFIX_big_file_cause_X_ZYXEL_DownloadSpeed_caculation_overflow.patch  601-ECNTSOC_BUGFIX_bind_busybox_to_cpu0.patch  602-MTKSOC_ENHANCE_TR369_IPPing.patch  603-MTKSOC_ENHANCE_TR369_TraceRoute.patch  604-MTKSOC_ENHANCE_TR369_DownloadDiagnostaics.patch  605-MTKSOC_ENHANCE_TR369_Fix_DownloadDiagnostics_Output_Error.patch  606-MTKSOC_ENHANCE_TR369_DownloadDiagnostics_FTP.patch  607-MTKSOC_ENHANCE_TR369_DownloadDiagnostics_FTP_FIX_BUG.patch  608-MTKSOC_BUGFIX_bind_busybox_to_cpu0.patch  609-QUECTEL_remove_stime.patch  610-ZYXEL_CVE_2013_1813.patch  611-ZYXEL_CVE_2016_2147.patch  612-ZYXEL_CVE_2016_2148.patch  613-ZYXEL_CVE_2016_6301.patch  614-ZYXEL_CVE_2017_15873_16544.patch  615-ZYXEL_CVE_2018_20679.patch  616-MTKSOC_ENHANCE_TR369_UploadDiagnostics_FTP.patch
package/busybox/quectel/: Makefile
package/dbus/: Makefile
package/dhcpv6/: Makefile
package/dhcpv6/patches/: 019-ZYXEL_BUGFIX_dhcp6relay_segmentation_fault.patch  020-ZYXEL_BUGFIX_dhcp6relay_get_global_ipv6_ipaddr.patch  021-ZYXEL_ENHACE_add_recvifname_node_to_recvmsg_jsonfile_PerryPeng.patch  022-ZYXEL_ENHANCE_support_cell_network_to_lan_router.patch  023-MSTC_add_library_flags_for_quectel_platform.patch
package/kernel/modules/: 001-depends.mk  other.mk
package/libs/clinkc/: Makefile
package/libs/eventlog_0.2.12/: Makefile
package/libs/glib2/: Makefile
package/libs/libical/: Makefile
package/libs/libiconv/: Makefile
package/libs/libjson-c/: Makefile
package/libs/libpcap/: Config.in  Makefile
package/libs/libqmi/: Makefile
package/libs/libstrophe/: Makefile
package/libs/lzo/: Makefile
package/libs/openssl/: Config-1.1.1n.in  Config-1.1.1t.in  Config.in  Makefile  Makefile-1.0.2o  Makefile-1.1.1n  Makefile-1.1.1t
package/logrotate/: Makefile
package/ndppd/: Makefile
package/network/services/wakkama/mtksoc-patches/examples/client/: CMakeLists.txt  lwm2mclient.c  lwm2mclient.h  object_apn_conn_profile.c  object_cell_connectivity.c  object_connectivity_moni.c  object_connectivity_stat.c  object_device.c  object_firmware.c  object_location.c  object_poweruplog.c  object_security.c  object_server.c
package/syslog-ng/: Makefile
package/syslog-ng_3.9.1/: Makefile
package/util-linux/: Makefile
scripts/: ext-toolchain.sh
scripts/config/: lex.zconf.c_shipped
toolchain/: Config.in
toolchain/gcc/: Config.in  Config.version  common.mk
toolchain/kernel-headers/: Makefile
toolchain/wrapper/: Makefile
tools/: Makefile
tools/mbedtls/: Makefile
tools/secure_header/: Makefile
(+563 files in other folders)
